@@ -9,8 +9,9 @@ fusionforge (5.2~rc1wheezy1) UNRELEASED; urgency=low
   * Update versioned Depends on MediaWiki
   * Move wikis to new (as of 2010-03-19, possibly by accident) data path
   * Check image upload is enabled before trying to do so (Closes: #679521)
+  * Unbreak and silence the MediaWiki nightly dump cronjob (Closes: #680165)
 
- -- Thorsten Glaser <tg@mirbsd.de>  Fri, 24 Aug 2012 10:41:57 +0200
+ -- Thorsten Glaser <tg@mirbsd.de>  Fri, 24 Aug 2012 10:53:50 +0200
 
 fusionforge (5.2~rc1-5) unstable; urgency=low
 
